[gd_scene load_steps=3 format=3 uid="uid://cxor8pm68ukjr"]

[ext_resource type="Script" path="res://scenes/games/jury_summons/jury_sum_main.gd" id="1_be56k"]
[ext_resource type="PackedScene" uid="uid://elmf3ex78n08" path="res://scenes/games/jury_summons/assets/clipBoard.tscn" id="2_itdwf"]

[node name="JurySumMain" type="Node2D"]
script = ExtResource("1_be56k")

[node name="JuryList" type="Node2D" parent="."]

[node name="JSeat1" type="Node2D" parent="JuryList"]
position = Vector2(80, 100)
scale = Vector2(0.75, 0.75)

[node name="JSeat2" type="Node2D" parent="JuryList"]
position = Vector2(160, 100)
scale = Vector2(0.75, 0.75)

[node name="JSeat3" type="Node2D" parent="JuryList"]
position = Vector2(240, 100)
scale = Vector2(0.75, 0.75)

[node name="JSeat4" type="Node2D" parent="JuryList"]
position = Vector2(320, 100)
scale = Vector2(0.75, 0.75)

[node name="JSeat5" type="Node2D" parent="JuryList"]
position = Vector2(400, 100)
scale = Vector2(0.75, 0.75)

[node name="JSeat6" type="Node2D" parent="JuryList"]
position = Vector2(480, 100)
scale = Vector2(0.75, 0.75)

[node name="Candidate" type="Node2D" parent="."]
position = Vector2(137, 481)
scale = Vector2(1.5, 1.5)

[node name="YesButton" type="Button" parent="."]
offset_left = 819.0
offset_top = 517.0
offset_right = 904.0
offset_bottom = 577.0
text = "YES"

[node name="NoButton" type="Button" parent="."]
offset_left = 930.0
offset_top = 516.0
offset_right = 1014.0
offset_bottom = 575.0
text = "NO"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ClipBoard" parent="." instance=ExtResource("2_itdwf")]
position = Vector2(899, 261)

[node name="BiasLabel" type="Label" parent="."]
offset_left = 807.0
offset_top = 377.0
offset_right = 847.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Bias
"

[node name="HonestyLabel" type="Label" parent="."]
offset_left = 928.0
offset_top = 377.0
offset_right = 992.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Honesty"

[node name="BiasValue" type="Label" parent="."]
offset_left = 804.0
offset_top = 409.0
offset_right = 844.0
offset_bottom = 432.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1

[node name="HonestyValue" type="Label" parent="."]
offset_left = 941.0
offset_top = 409.0
offset_right = 981.0
offset_bottom = 432.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0
"
horizontal_alignment = 1

[node name="GenderLabel" type="Label" parent="."]
offset_left = 822.0
offset_top = 228.0
offset_right = 862.0
offset_bottom = 251.0

[node name="HeightLabel" type="Label" parent="."]
offset_left = 825.0
offset_top = 258.0
offset_right = 865.0
offset_bottom = 281.0

[node name="WeightLabel" type="Label" parent="."]
offset_left = 820.0
offset_top = 290.0
offset_right = 860.0
offset_bottom = 313.0

[node name="HairColorLabel" type="Label" parent="."]
offset_left = 818.0
offset_top = 326.0
offset_right = 858.0
offset_bottom = 349.0

[node name="TrialType" type="Label" parent="."]
offset_left = 599.0
offset_top = 30.0
offset_right = 639.0
offset_bottom = 53.0

[node name="TrialValue" type="Label" parent="."]
offset_left = 940.0
offset_top = 23.0
offset_right = 980.0
offset_bottom = 46.0
horizontal_alignment = 2

[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
